# necrodrive_ros2

./: CMakeLists.txt  README.md  necrodrive_ros2.xml  package.xml
bringup_test/config/: controllers.yaml  forward_position_pub.yaml  jtc.yaml  trajectory_publisher.yaml
bringup_test/launch/: necrodrive.launch.py  necrodrive_move.launch.py
bringup_test/rviz/: necrodrive_test.rviz
bringup_test/sdf/: robot.sdf.xacro
description/ros2_control/: necrodrive.ros2_control.xacro
hardware/: can_reader.cpp  necrodrive_system.cpp
hardware/include/necrodrive_ros2/: can_reader.hpp  necrodrive_system.hpp  odrive_cmds.hpp
